# python-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-24-live-agentpool-scaling.md
examples/: agent_mesh.py  agent_team.py  basic_pipeline.py  claude_agent_sdk_mesh.py  context_and_capabilities.py  durable_recovery.py  financial_physics_mesh.py  focused_improvement.py  hermes_mesh.py  multi_agent.py  scripted_workflow.py  trajectory_replay.py
plans/: 2026-05-24-llm-agent-hermes.md  2026-05-24-llm-tools-v2.md  2026-05-24-trajectory-receipts.md  2026-06-10-agent-teams-workflows.md
scripts/: smoke_mcp_cli.py  smoke_receipt_metrics_cli.py
specs/: 2026-05-24-llm-agent-hermes-design.md  2026-05-24-llm-tools-v2-design.md  2026-05-24-trajectory-receipts-design.md  2026-05-29-signal-wire-format-design.md  2026-05-29-trajectory-replay-design.md  2026-06-02-mesh-event-recording-design.md  2026-06-04-claude-agent-sdk-integration-design.md  2026-06-10-agent-teams-workflows-design.md  2026-07-22-focused-improvement-design.md
src/signal_gating/: __init__.py  agent.py  channel.py  claude.py  cli.py  errors.py  finance.py  gate.py  improvement.py  llm.py  mesh.py  pipeline.py  pool.py  receipts_cli.py  registry.py  script.py  signal.py  taskboard.py  team.py  tracing.py  trajectory.py
src/signal_gating/integrations/: __init__.py  claude.py
tests/: test_agent.py  test_agent_native_enhancements.py  test_agent_native_orchestration.py  test_agent_native_primitives.py  test_audit_fixes.py  test_bugfixes.py  test_channel.py  test_claude_integration.py  test_claude_mcp_adapter.py  test_claude_mcp_auth_helper.py  test_claude_mcp_http.py  test_cli.py  test_codebase_review.py  test_cold_correctness.py  test_critical_fixes.py  test_examples_contract.py  test_finance.py  test_gate.py  test_improvement_loop.py  test_improvements.py  test_llm_agent.py  test_llm_mesh_integration.py  test_llm_tools.py  test_mesh.py  test_mesh_delivery_contract.py  test_new_features.py  test_pipeline.py  test_pool.py  test_pubsub.py  test_refinements.py  test_script.py  test_serialization.py  test_signal.py  test_taskboard.py  test_team.py  test_tracing.py  test_trajectory.py
