[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signal-gating"
version = "0.1.0"
description = "The Signal Gating Protocol SDK: agent-native signal orchestration for autonomous AI systems"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Signal Gating Protocol" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
llm = [
    "openai>=1.0",
]
otel = [
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
]

[project.urls]
Documentation = "https://signalgatingprotocol.github.io"
Repository = "https://github.com/signalgatingprotocol/python-sdk"
Issues = "https://github.com/signalgatingprotocol/python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_gating"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/signal_gating/errors.py" = ["N818"]

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = "openai.*"
ignore_missing_imports = true
